# HomeAssistantAPI

./: .gitignore  README.md  config.py  main.py  pyproject.toml
src/: globals.py  handlers.py  scheduler.py  schemas.py
src/service/actions/docker/: manager.py
src/service/actions/system/: manager.py
src/service/actions/torrent/: manager.py
src/service/ai/: manager.py
src/service/matcher/: matcher.py  schemas.py  templates.py
src/service/media/: manager.py
src/service/tmdb/: manager.py  schemas.py
src/ws/: manager.py
